@@ -51,9 +51,8 @@ jvm.jar  > jvm.log 2>&1 &
 ***
 -XX:GCDrainStackTargetSize=64 
 ***
--XX:+HeapDumpOnOutOfMemoryError 
-***
--XX:HeapDumpPath=/tmp/gc.hprof  当出现内存溢出，输出堆栈日志。
+* -XX:+HeapDumpOnOutOfMemoryError 
+* -XX:HeapDumpPath=/tmp/gc.hprof  当出现内存溢出，输出堆栈日志。
 ***
 -XX:InitialHeapSize=260254336(-Xms20M)  初始化堆的最小值 单位：byte
 ***
@@ -75,13 +74,32 @@ jvm.jar  > jvm.log 2>&1 &
 ***
 -XX:+TraceClassUnloading 开启类卸载日志
 ***
--Xms100M 栈的大小
+* -Xms:初始堆大小
+* -Xmx:最大堆大小
+* -Xmn:新生代大小
+* -XX:NewRatio:设置新生代和老年代的比值。如：为3，表示年轻代与老年代比值为1：3
+* -XX:SurvivorRatio:新生代中Eden区与两个Survivor区的比值。注意Survivor区有两个。如：为3，表示Eden：Survivor=3：2，一个Survivor区占整个新生代的1/5  
+* -XX:MaxTenuringThreshold:设置转入老年代的存活次数。如果是0，则直接跳过新生代进入老年代。默认值15次。
+* -XX:PermSize、-XX:MaxPermSize:分别设置永久代最小大小与最大大小（Java8以前）
+* -XX:MetaspaceSize、-XX:MaxMetaspaceSize:分别设置元空间最小大小与最大大小（Java8以后）
 ***
--XX:SurvivorRatio=8 from:to:eden=1:1:8
+* -XX:+UseSerialGC:设置串行收集器
+* -XX:+UseParallelGC:设置并行收集器
+* -XX:+UseParalledlOldGC:设置并行老年代收集器
+* -XX:+UseConcMarkSweepGC:设置并发收集器
 ***
--XX:PermSize=10m -XX:MaxPermSize=10m JDK1.8之前的配置(永久代)，1.8之后是MetaSpace
+* -XX:+PrintGC
+* -XX:+PrintGCDetails
+* -XX:+PrintGCTimeStamps
+* -Xloggc:filename
 ***
--XX:MetaspaceSize=10m -XX:MaxMetaspaceSize=10m
+* -XX:ParallelGCThreads=n:设置并行收集器收集时使用的CPU数。并行收集线程数。
+* -XX:MaxGCPauseMillis=n:设置并行收集最大暂停时间
+* -XX:GCTimeRatio=n:设置垃圾回收时间占程序运行时间的百分比。公式为1/(1+n)
+***
+* -XX:+CMSIncrementalMode:设置为增量模式。适用于单CPU情况。
+* -XX:ParallelGCThreads=n:设置并发收集器新生代收集方式为并行收集时，使用的CPU数。并行收集线程数。
+***
 
 
 
